--- a/fullstack/client/src/index.css
+++ b/fullstack/client/src/index.css
@@ -8,3 +8,22 @@ input::-webkit-inner-spin-button {
   -webkit-appearance: none;
   margin: 0;
 }
+/* 
+body::-webkit-scrollbar {
+  width: 10px;
+} */
+
+.scroll-style::-webkit-scrollbar {
+  height: 6px;
+}
+
+/* Track */
+.scroll-style::-webkit-scrollbar-track {
+  background: #f1f1f1;
+}
+
+/* Handle */
+.scroll-style::-webkit-scrollbar-thumb {
+  border-radius: 20px;
+  background-color: #8b5cf6;
+}
